# gcloudtext2speech

./: .gitignore  README.md  setup.cfg
