[metadata]
name = gcloud-text2speech-c1ark
version = 0.0.1
author = Jesse Clark
author_email = jesse@sharedit.com
description = Helper package for doing text to speech through Google
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/u-clarkdeveloper/gcloudtext2speech
project_urls =
    Bug Tracker = https://github.com/u-clarkdeveloper/gcloudtext2speech/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src